--- a/git.tex
+++ b/git.tex
@@ -306,7 +306,7 @@ $ git merge develop
 \end{verbatim}
 
 Questo permette di vedere prima le nuove modifiche remote (si possono guardare
-al volo facendo ad esempio \code{git checkout origin develop}) per poi decidere
+al volo facendo ad esempio \code{git checkout origin/develop}) per poi decidere
 se effettuare il merge o no.
 
 \begin{verbatim}
