--- a/git.tex
+++ b/git.tex
@@ -195,6 +195,11 @@ L'opzione \code{-s} (``signed'') aggiunge la firma dell'autore nella descrizione
 Signed-off-by: Stivvo entattis15@itsvinci.com
 \end{verbatim}
 
+Infine, può capitare di essersi dimenticati di aggiungere un file di aver
+effettuato il commit troppo presto o di aver sbagliato la scrittura del
+messaggio.
+In questi casi l'opzione \code{--amend} permette di riscrivere il commit.
+
 \subsection{Add, rm, reset, status}
 I file coinvolti dal commit devono essere prima selezionati con add. In questo
 modo si entra nella \textbf{staging area}. è uno stato intermedio che sta prima di
