link su revert e reset; fetch e pull

--- a/git.tex
+++ b/git.tex
@@ -927,6 +927,19 @@ rebase, ammend
     \item \link{https://stackoverflow.com/questions/572549/difference-between-git-add-a-and-git-add?rq=1}
         {parametri di add}
     \item \link{https://stackoverflow.com/questions/1125968/how-do-i-force-git-pull-to-overwrite-local-files?rq=1}
+        {sovrascrivere le modifiche locali con quelle remote}
+    \item \link{https://www.git-tower.com/learn/git/faq/difference-between-git-fetch-git-pull}
+        {differenza tra fetch e pull}
+    \item \link{https://stackoverflow.com/questions/4114095/how-do-i-revert-a-git-repository-to-a-previous-commit?rq=1}
+        {tornare a commit precedenti}
+    \item \link{https://stackoverflow.com/questions/8358035/whats-the-difference-between-git-revert-checkout-and-reset}
+        {differenza tra revert e reset}
+\end{itemize}
+
+\subsection{head, remotes, branch}
+\begin{itemize}
+    \item \link{https://stackoverflow.com/questions/1783405/how-do-i-check-out-a-remote-git-branch?rq=1}
+        {checkout di un branch remoto}
         {sovrascrivere con pull}
     \item \link{https://stackoverflow.com/questions/4114095/how-do-i-revert-a-git-repository-to-a-previous-commit?rq=1}
         {tornare a commit precedenti}
